Update services.name value in render.yaml.

--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ databases:
 
 services:
   - type: web
-    name: mysite
+    name: deciphr
     env: python
     buildCommand: "./build.sh"
     startCommand: "gunicorn mysite.wsgi:application"
