Update services.name value in render.yaml.

--- a/render.yaml
+++ b/render.yaml
@@ -8,7 +8,7 @@ services:
     name: deciphr
     env: python
     buildCommand: "./build.sh"
-    startCommand: "gunicorn mysite.wsgi:application"
+    startCommand: "gunicorn deciphr.wsgi:application"
     envVars:
       - key: DATABASE_URL
         fromDatabase:
